# apex-autonomous-retail

./: README.md  apex_product_catalog.csv  app.py  main.py  pyproject.toml
docs/: README  flow-diagrams.md
seed_data/: customers.csv  inventory.csv  invoices.csv  order_items.csv  orders.csv  product_catalog.csv  products.csv
src/graph/: orchestrator.py  state.py
src/mcp/: memory_mcp.py  server.py
